# ASP

./: .gitignore  README.md  dense_model.py  main.py  pyproject.toml
sparse_gemv/: README.md  gemv_test.py  setup.py
sparse_gemv/ops/csrc/: sparse_gemv_fp16.cpp  sparse_gemv_fp16_kernel.cu  sparse_gemv_fp32.cpp  sparse_gemv_fp32_kernel.cu  utils.h
sparse_gemv/ops/ops_py/: __init__.py  sparse_gemv.py
teal/: README.md  generate.py  grab_act.py  mlp_llama.py  mlp_opt.py  model.py  model_llama.py  model_opt.py  self_attn.py  self_attn_llama.py  self_attn_opt.py  teal_utils.py  test_ppl.py
utils/: data.py  eval_ppl.py
